www/front_src/src/styles/partials/_side-nav.scss
/* ... */
.collapse {
  .collapsed-level {
    &-item {
      background-color: $grey-clear;
      &-link {
        border-bottom: 1px solid $grey-classic;
        text-align: left;
        text-decoration: none;
        font-size: 0.7rem;
        color: $centreon-graphit;
        font-family: $primary-font-regular;
        padding: 11px 10px 11px 28px;
        display: block;
        letter-spacing: -0.4px;
        cursor: pointer;
      }
    }

    &-title {
      height: 18px;
      background-color: $white-color;
      display: block;
      position: relative;
      margin:0;
      &:before {
        content: ' ';
        height: 1px;
        width: 100%;
        background-color: $lightblue-centreon-primary;
        position: absolute;
        display: block;
        top: 9px;
      }
      span {
        font-family: $primary-font-regular;
        padding: 0px 5px;
        color: $lightblue-centreon-primary;
        background: $white-color;
        font-variant: all-petite-caps;
        font-size: 0.7rem;
        position: relative;
        line-height: 18px;
      }
    }
  }
  .collapsed-item {
    .first-level {
      display: none;
    }
    .second-level {
      display: none;
    }
    &.active {
      .first-level {
        display: block;
      }
      > .collapsed-level-item-link {
        background-position: 13px -94px;
      }
    }
    &.active {
      .second-level {
        display: block;
      }
    }
  }
}
.collapsed-level {
  &-items {
    &.first-level {
      .collapsed-level-item {
        background-color: $white-color;
        .collapsed-level-item-link {
          padding: 10px 10px 10px 34px;
        }
      }
    }
  }
}

/* ---------------------------------------------------
    MEDIAQUERIES
----------------------------------------------------- */

@media (max-width: 768px) {
  #sidebar {
    min-width: 80px;
    max-width: 80px;
    text-align: center;
    margin-left: -80px;
  }
  .dropdown-toggle::after {
    top: auto;
    bottom: 10px;
    right: 50%;
    -webkit-transform: translateX(50%);
    -ms-transform: translateX(50%);
    transform: translateX(50%);
  }
  #sidebar {
    &.active {
      margin-left: 0;
    }
    .sidebar-header h3, .CTAs {
      display: none;
    }
    .sidebar-header strong {
      display: block;
    }
    margin-left: 0;
  }
  #sidebarCollapse span {
    display: none;
  }
}

